Finalizando o metodo DELETAR

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <div id="buttons-container">
       
-      <button onClick="Calcular('AC')" id="ac" >AC</button>
-      <button onClick="Calcular('DEL')" id="del">DEL</button>
+      <button onClick="Limpar()" id="ac" >AC</button>
+      <button onClick="Deletar()" id="del">DEL</button>
       <button onClick="Calcular('/')">/</button>
       <button onClick="Calcular('7')" class="number">7</button>
       <button onClick="Calcular('8')" class="number">8</button>
