modificando mensagem para evento de click

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
       
       <button onClick="Limpar()" id="ac" >AC</button>
       <button onClick="Deletar()" id="del">DEL</button>
-      <button onClick="Calcular('/')">/</button>
-      <button onClick="Calcular('7')" class="number">7</button>
-      <button onClick="Calcular('8')" class="number">8</button>
-      <button onClick="Calcular('9')" class="number">9</button>
-      <button onClick="Calcular('*')" >*</button>
-      <button onClick="Calcular('4')" class="number">4</button>
-      <button onClick="Calcular('5')" class="number">5</button>
-      <button onClick="Calcular('6')" class="number">6</button>
-      <button onClick="Calcular('-')" >-</button>
-      <button onClick="Calcular('1')" class="number">1</button>
-      <button onClick="Calcular('2')" class="number">2</button>
-      <button onClick="Calcular('3')" class="number">3</button>
-      <button onClick="Calcular('+')" >+</button>
-      <button onClick="Calcular('0')" class="number">0</button>
-      <button onClick="Calcular('.')" class="number">.</button>
-      <button onClick="Calcular('=')" id="equal-btn" >=</button>
+      <button onClick="Inserir('/')">/</button>
+      <button onClick="Inserir('7')" class="number">7</button>
+      <button onClick="Inserir('8')" class="number">8</button>
+      <button onClick="Inserir('9')" class="number">9</button>
+      <button onClick="Inserir('*')" >*</button>
+      <button onClick="Inserir('4')" class="number">4</button>
+      <button onClick="Inserir('5')" class="number">5</button>
+      <button onClick="Inserir('6')" class="number">6</button>
+      <button onClick="Inserir('-')" >-</button>
+      <button onClick="Inserir('1')" class="number">1</button>
+      <button onClick="Inserir('2')" class="number">2</button>
+      <button onClick="Inserir('3')" class="number">3</button>
+      <button onClick="Inserir('+')" >+</button>
+      <button onClick="Inserir('0')" class="number">0</button>
+      <button onClick="Inserir('.')" class="number">.</button>
+      <button onClick="Calcular()" id="equal-btn" >=</button>
 
 
     </div>
